# django2

./: .env-example  .gitignore  pyproject.toml
core/: create_superuser.py  urls.py  wsgi.py
core/settings/: __init__.py  base.py  installed_apps.py  middlewares.py  pictures.py  storages.py
django2/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
django2/migrations/: 0001_initial.py  0002_product_picture_width.py  0003_alter_product_picture.py
django2/static/css/: style.css
django2/templates/: base.html  contact.html  index.html  product.html
django2/templates/partials/: form_card.html
django2/templates/registration/: login.html  logout.html  signup.html
